--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,25 @@ $(document).ready(function(){
         <div class="news-wrap">
                     <div class="container">
                         <div class="row">
+				<div class="col-md-4 col-lg-4 m-15px-tb">
+                                <div class="news-grid">
+                                    <div class="news-grid-image"><img src="https://media.licdn.com/dms/image/C5622AQFcv0B8Jg38YQ/feedshare-shrink_1280/0/1675411720505?e=1678924800&amp;v=beta&amp;t=Yfq9bb64w0Df_Z4mpkRcqhYx8gFkWUSLihtj_ThoSTo" alt="">
+                                        <div class="news-grid-box">
+                                            <h1>11</h1>
+                                            <p>May</p>
+                                        </div></div>
+                                        <div class="news-grid-txt">
+                                            <span>INFO</span>
+                                            <h2>The 𝟏𝟏𝟖𝐭𝐡 𝐀𝐧𝐧𝐢𝐯𝐞𝐫𝐬𝐚𝐫𝐲 of our College</h2>
+                                            <ul>
+                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2022</li>
+                                                <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                            </ul>
+                                            <p>La Salian brothers first arrived in Ceylon back in 1866 disembarking at Galle while on their homeward journey to France from Mangalore (India) and they later visited Colombo. In 1876, </p>
+                                            <a href="https://www.linkedin.com/posts/quadrangle-magazine_delasalle-lasalians-schoolsanniversary-activity-7027186086569271296-Ieuz?utm_source=share&amp;utm_medium=member_desktop">Read More...</a>
+                                        </div>
+                                    </div>
+                                </div>
                             <div class="col-md-4 col-lg-4 m-15px-tb">
                                 <div class="news-grid">
                                     <div class="news-grid-image"><img src="News and Events/Main-Thumbsmod.jpg" alt="">
