--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ $(document).ready(function(){
         background-size: cover;
         margin-top: 0;
         padding-top: 0;
-        background: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/home-section2.jpg) no-repeat center;
+        background: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/home-section2.gif) no-repeat center;
         background-size: cover;
         height: 100vh;
         position: relative;
@@ -606,6 +606,21 @@ $(document).ready(function(){
 
       }
     </style>
+
+<img style="
+    position: fixed;
+    cursor: pointer;
+    left: 0px;
+    transform: rotate(0deg) !important;
+    top: 10%;
+    text-align: center;
+    z-index: 9999;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    width: 9rem;
+    opacity: 95%;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px 20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px;
+" src="https://cloud.domains.lk/index.php/apps/files_sharing/publicpreview/ykLYKnkrRDaX568?file=/TopWeb%20Logo%20with%20White%20Patch.jpg&amp;fileId=58383&amp;x=1280&amp;y=1024&amp;a=true" onclick="location.href='https://topweb.lk/february-winners/#:~:text=De%20La%20Salle%20College%20%7C%20www.delasalle.lk';">
 
     <div class="wrallet">
       <!--figure>
