--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ $(document).ready(function(){
                         <div class="row">
 				<div class="col-md-4 col-lg-4 m-15px-tb">
                                 <div class="news-grid">
-                                    <div class="news-grid-image"><img src="https://media.licdn.com/dms/image/C5622AQFcv0B8Jg38YQ/feedshare-shrink_1280/0/1675411720505?e=1678924800&amp;v=beta&amp;t=Yfq9bb64w0Df_Z4mpkRcqhYx8gFkWUSLihtj_ThoSTo" alt="">
+                                    <div class="news-grid-image"><img src="https://media.licdn.com/dms/image/C5622AQFcv0B8Jg38YQ/feedshare-shrink_2048_1536/0/1675411720518?e=1682553600&v=beta&t=WVPhNSFDnl9nn960irFuSiiL8AdQmAX6-KX_mIakZsM" alt="">
                                         <div class="news-grid-box">
                                             <h1>11</h1>
                                             <p>May</p>
