--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
     <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/fontawesome.css" rel="stylesheet">
     <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/brands.css" rel="stylesheet">
     <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/solid.css" rel="stylesheet">
+	
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "De La Salle College, Colombo",
+	  "url": "https://delasalle.lk/",
+	  "logo": "https://upload.wikimedia.org/wikipedia/en/6/66/De_La_Salle_CMB_crest.png",
+	  "sameAs": [
+	    "https://web.facebook.com/DeLaSalleCollegeColombo/",
+	    "https://www.linkedin.com/school/delasallelk",
+	    "https://www.youtube.com/@delasallelk",
+	    "https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo"
+	  ]
+	}
+	</script>
 
     <!-- Start WOWSlider HEAD section --> <!-- add to the <head> of your page -->
 	  <link rel="stylesheet" type="text/css" href="College Assests/main-infoslider/engine1/style.css" />
