--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 	  ]
 	}
 	</script>
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GWH9GCZM8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3GWH9GCZM8');
+</script>
 
     <!-- Start WOWSlider HEAD section --> <!-- add to the <head> of your page -->
 	  <link rel="stylesheet" type="text/css" href="College Assests/main-infoslider/engine1/style.css" />
