implemented vercel analytics

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	}
 	</script>
 	
+	<script defer src="/_vercel/insights/script.js"></script>
+	
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3GWH9GCZM8"></script>
 <script>
