Added Vercel Analytics for Improved Website Insights

--- a/Academics.php.html
+++ b/Academics.php.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+
+    <script defer src="/_vercel/insights/script.js"></script>
     
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
