--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/snowflakes.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!--Snow Flakes-->
 <!--div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
