--- a/School-Layout-Plan.html
+++ b/School-Layout-Plan.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
      <!--Site Meta-->
 
      <meta property="og:locale" content="en_GB" />
