--- a/announcements.html
+++ b/announcements.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet">
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!--Script Starts-->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
