--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,7 @@
     <!-- Baguettebox CSS for image popup -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
 
             <!--Site Meta-->
 
