--- a/obu.html
+++ b/obu.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
     <!--Site Meta-->
 
     <meta property="og:locale" content="en_GB" />
