--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!--Site Meta-->
 
     <meta property="og:locale" content="en_GB" />
