--- a/staff.html
+++ b/staff.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!--Site Meta-->
 
     <meta property="og:locale" content="en_GB" />
